--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -87,23 +87,37 @@
         </div>
         <div class="planning">
           <div class="planning__window">
-            <div class="planning__container">
+            <div class="planning__link-container">
               <a href="#" target="_blank" class="planning__link"><img
                   src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct" width="485"
                   height="340" class="img_g" alt=""></a>
               <a href="#" target="_blank" class="planning__link"><img
-                src="//shop3.daumcdn.net/shophow/sib/0_211220170158_owNwlIYMPjCOmpLzLBZpBGQkATLoNNWG" width="485"
-                height="340" class="img_g" alt=""></a>
+                  src="//shop3.daumcdn.net/shophow/sib/0_211220170158_owNwlIYMPjCOmpLzLBZpBGQkATLoNNWG" width="485"
+                  height="340" class="img_g" alt=""></a>
               <a href="#" target="_blank" class="planning__link"><img
-                src="//shop3.daumcdn.net/shophow/sib/0_211220170214_KnBppOYCunaKIzTENvoRdzZivpnaGYdc" width="485"
-                height="340" class="img_g" alt=""></a>
+                  src="//shop3.daumcdn.net/shophow/sib/0_211220170214_KnBppOYCunaKIzTENvoRdzZivpnaGYdc" width="485"
+                  height="340" class="img_g" alt=""></a>
               <a href="#" target="_blank" class="planning__link"><img
-                src="//shop2.daumcdn.net/shophow/sib/0_211220170154_lPdfLnRSayayFBdHisdeeCypQQWWgaeu" width="485"
-                height="340" class="img_g" alt=""></a>
-              <button class="planning__left-btn"></button>
-              <button class="planning__right-btn"></button>
+                  src="//shop2.daumcdn.net/shophow/sib/0_211220170154_lPdfLnRSayayFBdHisdeeCypQQWWgaeu" width="485"
+                  height="340" class="img_g" alt=""></a>
+            </div>
+            <div class="planning__btn-container">
+              <button class="planning__left-btn">
+                <span class="planning__left-btn-icon"></span>
+              </button>
+              <button class="planning__right-btn">
+                <span class="planning__right-btn-icon"></span>
+              </button>
               <div class="planning__paging">
-                <span></span><span></span><span></span>
+                <span class="planning__page">
+                  <div class="planning__page-btn"></div>
+                </span>
+                <span class="planning__page">
+                  <div class="planning__page-btn"></div>
+                </span>
+                <span class="planning__page">
+                  <div class="planning__page-btn"></div>
+                </span>
               </div>
             </div>
           </div>
