현재 슬라이드 버튼 하이라이팅 추가

--- a/ethan.sglee/shoppingHow/public/stylesheets/styles/app.css
+++ b/ethan.sglee/shoppingHow/public/stylesheets/styles/app.css
@@ -212,6 +212,9 @@ h1 {
   height: 5px;
   background-color: lightgray;
 }
+.container .promotion .banner .planning .planning__window .planning__btn-container .planning__paging .planning__page .planning__page-now {
+  background-color: grey;
+}
 .container .promotion img {
   margin: auto;
   text-align: center;
