--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -110,6 +110,9 @@
               </button>
               <div class="planning__paging">
                 <span class="planning__page">
+                  <div class="planning__page-btn planning__page-now"></div>
+                </span>
+                <span class="planning__page">
                   <div class="planning__page-btn"></div>
                 </span>
                 <span class="planning__page">
