--- a/ethan.sglee/shoppingHow/public/stylesheets/sass/app.scss
+++ b/ethan.sglee/shoppingHow/public/stylesheets/sass/app.scss
@@ -216,6 +216,10 @@ $planningcontainersize: 4;
                                     height: 5px;
                                     background-color: lightgray;
                                 }
+
+                                .planning__page-now {
+                                    background-color: grey;
+                                }
                             }
                         }
                     }
