--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -88,16 +88,16 @@
         <div class="planning">
           <div class="planning__window">
             <div class="planning__link-container">
-              <a href="#" target="_blank" class="planning__link"><img
+              <a id='1' href="#" target="_blank" class="planning__link"><img
                   src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct" width="485"
                   height="340" class="img_g" alt=""></a>
-              <a href="#" target="_blank" class="planning__link"><img
+              <a id='2' href="#" target="_blank" class="planning__link"><img
                   src="//shop3.daumcdn.net/shophow/sib/0_211220170158_owNwlIYMPjCOmpLzLBZpBGQkATLoNNWG" width="485"
                   height="340" class="img_g" alt=""></a>
-              <a href="#" target="_blank" class="planning__link"><img
+              <a id='3' href="#" target="_blank" class="planning__link"><img
                   src="//shop3.daumcdn.net/shophow/sib/0_211220170214_KnBppOYCunaKIzTENvoRdzZivpnaGYdc" width="485"
                   height="340" class="img_g" alt=""></a>
-              <a href="#" target="_blank" class="planning__link"><img
+              <a id='4' href="#" target="_blank" class="planning__link"><img
                   src="//shop2.daumcdn.net/shophow/sib/0_211220170154_lPdfLnRSayayFBdHisdeeCypQQWWgaeu" width="485"
                   height="340" class="img_g" alt=""></a>
             </div>
