캐러셀 페이지 표시 기능 구현

--- a/ethan.sglee/shoppingHow/public/stylesheets/sass/app.scss
+++ b/ethan.sglee/shoppingHow/public/stylesheets/sass/app.scss
@@ -211,8 +211,8 @@ $planningcontainersize: 3;
                                     background-color: lightgray;
                                 }
 
-                                .planning__page-now {
-                                    background-color: grey;
+                                .planning__current {
+                                    background-color: gray;
                                 }
                             }
                         }
