--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -110,7 +110,7 @@
               </button>
               <div class="planning__paging">
                 <span class="planning__page">
-                  <div class="planning__page-btn planning__page-now"></div>
+                  <div class="planning__page-btn planning__current"></div>
                 </span>
                 <span class="planning__page">
                   <div class="planning__page-btn"></div>
