--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -72,7 +72,24 @@
       </ul>
       <ul class="private-menu">
         <li class="private-menu__btn"><a href="#">로그인</a></li>
-        <li class="private-menu__btn"><a href="#">최근본상품</a></li>
+        <li class="private-menu__btn">
+          <a href="#">최근본상품</a>
+        </li>
+        <div class="private-menu__recent-window">
+          <div class="private-menu__recent-bar">
+            <div class="private-menu__recent-tab-container">
+              <div class="private-menu__recent-tab">최근 본 상품</div>
+              <div class="private-menu__recent-tab">내가 찜한 상품</div>
+            </div>
+          </div>
+          <div class="private-menu__recent-contents">
+            <div class="private-menu__recent-contents__item"></div>
+            <div class="private-menu__recent-contents__item"></div>
+            <div class="private-menu__recent-contents__item"></div>
+            <div class="private-menu__recent-contents__item"></div>
+            <div class="private-menu__recent-contents__item"></div>
+          </div>
+        </div>
       </ul>
     </div>
   </header>
@@ -110,7 +127,7 @@
               </button>
               <div class="planning__paging">
                 <span class="planning__page">
-                  <div class="planning__page-btn planning__current"></div>
+                  <div class="planning__page-btn planning__current  "></div>
                 </span>
                 <span class="planning__page">
                   <div class="planning__page-btn"></div>
