--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -82,13 +82,13 @@
               <div class="private-menu__recent-tab">내가 찜한 상품</div>
             </div>
           </div>
-          <div class="private-menu__recent-contents">
-            <div class="private-menu__recent-contents__item"></div>
-            <div class="private-menu__recent-contents__item"></div>
-            <div class="private-menu__recent-contents__item"></div>
-            <div class="private-menu__recent-contents__item"></div>
-            <div class="private-menu__recent-contents__item"></div>
-          </div>
+          <ul class="private-menu__recent-contents">
+            <li class="private-menu__recent-contents__item">
+              <a href="#">
+                <img src="" alt="">
+              </a>
+            </li>
+          </ul>
         </div>
       </ul>
     </div>
@@ -225,29 +225,6 @@
   <footer></footer>
 
   <script type="module" src="javascripts/index.js"></script>
-  <script>
-    function makeHotDealHTML() {
-      const target = document.querySelector(".hot-deal-list");
-      const hotdealItemTpl = `
-              <li class="hot-deal__item">
-                  <a href="" class="hot-deal__link">
-                      <span class="hot-deal__thumb">
-                          <img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20211221145844446_191895" class="hot-deal__img" alt="">
-                      </span>
-
-                      <strong class="hot-deal__title">구매1만↑우유앙빵10+10</strong>
-
-                      <span class="hot-deal__detail-price">
-                          <span class="txt-price">18,500 </span>
-                          <span class="txt-price-percent">핫딜가</span>
-                      </span>
-                  </a>
-              </li>`
-
-      target.innerHTML = Array(10).fill(0).reduce((html, item) => html + hotdealItemTpl, ``);
-    }
-    makeHotDealHTML();
-  </script>
 </body>
 
 </html>
