feat: searchTop10 컴포넌트 기능 구현

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -14,6 +14,7 @@ h1 {
 $primaryColor: #eeffcc;
 $bgColor: #f5f5f5;
 $paleGray: #e4e2e2;
+$darkGray: #939393;
 
 $button-padding: 20px;
 %border-basic {
