최근 본 상품 마우스오버 구현

--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -75,7 +75,7 @@
         <li class="private-menu__btn">
           <a href="#">최근본상품</a>
         </li>
-        <div class="private-menu__recent-window">
+        <div class="private-menu__recent-window none">
           <div class="private-menu__recent-bar">
             <div class="private-menu__recent-tab-container">
               <div class="private-menu__recent-tab">최근 본 상품</div>
@@ -83,11 +83,6 @@
             </div>
           </div>
           <ul class="private-menu__recent-contents">
-            <li class="private-menu__recent-contents__item">
-              <a href="#">
-                <img src="" alt="">
-              </a>
-            </li>
           </ul>
         </div>
       </ul>
