--- a/client/src/components/common/text-roller/index.scss
+++ b/client/src/components/common/text-roller/index.scss
@@ -1,3 +1,12 @@
+.roller-container {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
 .search-top10 {
   position: absolute;
   left: 20px;
