feat: CategoryContent 기능 작업
* Top-Middle-Low 로 연결되는 카테고리 리스트 보여주기 이벤트 작업
* 이벤트 핸들러 삭제 로직을 위해 추상화 Component 클래스에 removeEvent 메소드 추가 및 setState 시 해당 메소드 호출
* 카테고리 서버 api response 포맷 구체화 {top: {middle: lowlist ...}}
* Category css 디자인 작업

--- a/src/public/sass/headerMenu.scss
+++ b/src/public/sass/headerMenu.scss
@@ -33,6 +33,69 @@
         font-size: 0;
         line-height: 0;
       }
+      ul.category__content--tab-list {
+        width: 179px;
+        height: 100%;
+        padding-bottom: 70px;
+        padding-top: 10px;
+        background-color: #f7f7f7;
+        box-sizing: border-box;
+        li {
+          display: block;
+          width: 100%;
+          height: 44px;
+          padding-left: 32px;
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 47px;
+          letter-spacing: -0.06em;
+          box-sizing: border-box;
+          color: #333;
+        }
+        li:hover {
+          background-color: rgba(255, 255, 128, 0.5);
+        }
+      }
+      ul.category__content--middle-tab {
+        width: 179px;
+        height: 100%;
+        padding-bottom: 70px;
+        padding-top: 10px;
+        box-sizing: border-box;
+        li {
+          display: block;
+          width: 100%;
+          height: 44px;
+          padding-left: 32px;
+          line-height: 47px;
+          letter-spacing: -0.06em;
+          box-sizing: border-box;
+          color: #333;
+        }
+        li:hover {
+          background-color: rgba(255, 255, 128, 0.5);
+        }
+      }
+      ul.category__content--low-tab {
+        width: 179px;
+        height: 100%;
+        padding-bottom: 70px;
+        padding-top: 10px;
+        box-sizing: border-box;
+        li {
+          display: block;
+          width: 100%;
+          height: 44px;
+          padding-left: 32px;
+          line-height: 47px;
+          letter-spacing: -0.06em;
+          box-sizing: border-box;
+          color: #333;
+        }
+        li:hover {
+          background-color: rgba(255, 255, 128, 0.5);
+        }
+      }
     }
   }
 
