--- a/src/public/sass/_global.scss
+++ b/src/public/sass/_global.scss
@@ -15,6 +15,7 @@ $banner-promotion-height: 445px;
 $banner-promotion-item-width: 635px;
 $primaryColor: #eeffcc;
 $bgColor: #f5f5f5;
+$planning-btn-height: 30px;
 
 $button-padding: 20px;
 %border-basic {
