--- a/client/src/components/common/carousel/index.scss
+++ b/client/src/components/common/carousel/index.scss
@@ -1,17 +1,17 @@
-.header-top {
-  display: flex;
-  padding: 100px;
-  justify-content: center;
-  align-items: center;
+.carousel {
+  width: 50%;
+  border-right: 1px solid #f1f1f1;
+  border-bottom: 1px solid #f1f1f1;
+  overflow: hidden;
+  position: relative;
 
-  .title {
+  .carousel-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
     display: flex;
-    align-items: center;
-    margin-right: 50px;
-    cursor: pointer;
-
-    img {
-      width: 120px;
-    }
+    transform: translateX(0%);
+    transition: all 1s ease;
   }
 }
