refactor: header innerHTML 컴포넌트로 분리

--- a/src/sass/_verticalRolling.scss
+++ b/src/sass/_verticalRolling.scss
@@ -4,7 +4,7 @@
     top: 15px;
     left: 10px;
     width: 390px;
-    // overflow: hidden;
+    overflow: hidden;
 }
 
 .vertical-rolling__container {
