--- a/frontend/src/style/itemGroupWrap.scss
+++ b/frontend/src/style/itemGroupWrap.scss
@@ -28,6 +28,14 @@
     }
 }
 
+.link_prod {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    text-decoration: none;
+}
+
+
 .section_tab{
     overflow: visible;
     position: relative;
@@ -103,4 +111,84 @@
     display: block;
     margin: 14px 0 2px;
     line-height: 22px;
+}
+
+.section_hotdeal{
+    .thumb_hotdeal {
+        display: block;
+        overflow: hidden;
+        width: 200px;
+        height: 200px;
+
+        .img_g {
+            width: 100%;
+        }
+    }
+
+    .cont_item{
+        float: none;
+        .tit_g {
+            display: -webkit-box;
+            height: 40px;
+            margin: 11px 0 0;
+            font-size: 13px;
+            line-height: 20px;
+            color: #555;
+            word-break: break-all;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+        }
+    }
+
+    .detail_price {
+        display: block;
+        height: 43px;
+        padding-top: 7px;
+        letter-spacing: 0;
+
+        .info_discount {
+            display: block;
+            overflow: hidden;
+            height: 30px;
+        }
+    }
+
+    .txt_discount {
+        float: left;
+        font-size: 14px;
+        line-height: 23px;
+        color: #000;
+        font-weight: 700;
+        font-family: Tahoma,sans-serif;
+
+        .txt_unit {
+            font-weight: 400;
+            font-family: '돋움',dotum,sans-serif;
+        }
+    }
+
+    .txt_percent {
+        float: right;
+        font-size: 24px;
+        line-height: 30px;
+        color: #fc363c;
+
+        .txt_unit {
+            display: inline-block;
+            margin-top: 10px;
+            font-size: 14px;
+            line-height: 16px;
+            vertical-align: top;
+        }
+    }
+
+    .txt_price {
+        display: block;
+        margin-top: -9px;
+        font-size: 13px;
+        color: #888;
+        line-height: 22px;
+        font-family: Tahoma,sans-serif;
+        text-decoration: line-through;
+    }
 }
