chore : 데이터에 맞춰서 구조 수정

--- a/client/src/components/header/hot-shopping-keyword/index.scss
+++ b/client/src/components/header/hot-shopping-keyword/index.scss
@@ -1,5 +1,5 @@
 .hot-shopping-keyword {
-  flex: auto;
+  width: 60%;
 
   .hot-shopping-keyword__list-container {
     display: flex;
@@ -33,6 +33,7 @@
       left: 25;
       top: 0;
       cursor: pointer;
+      font-size: 0.8rem;
     }
   }
 }
