feat : 최근 검색어 삭제위한 구조 수정

--- a/client/src/components/header/recent-search-name/index.scss
+++ b/client/src/components/header/recent-search-name/index.scss
@@ -1,5 +1,5 @@
 .recent-search-name {
-  flex: auto;
+  width: 40%;
   .recent-search-name__title {
     color: var(--color-grey2);
     font-weight: bold;
