--- a/src/scss/ComponentStyles/Carousel.module.scss
+++ b/src/scss/ComponentStyles/Carousel.module.scss
@@ -2,6 +2,9 @@
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
   .banner-container {
     width: 100%;
@@ -15,17 +18,17 @@
       .banner-item {
         width: 100%;
         height: 100%;
-        flex-wrap: wrap;
       }
     }
   }
   
   .side-btn {
-    width: 20px;
-    height: 20px;
+    width: 23px;
+    height: 45px;
     top: calc(50% - 10px);
     position: absolute;
     background: url("https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png") no-repeat;
+    cursor: pointer;
     
     &.left-side-btn {
       left: 0;
@@ -34,7 +37,19 @@
     
     &.right-side-btn {
       right: 0;
-      background-position: 0 -30px;
+      background-position: -30px 0;
+    }
+  }
+  
+  &:hover {
+    .side-btn {
+      &.left-side-btn {
+        background-position: -60px 0;
+      }
+      
+      &.right-side-btn {
+        background-position: -90px 0;
+      }
     }
   }
 }
