--- a/src/public/sass/_global.scss
+++ b/src/public/sass/_global.scss
@@ -16,6 +16,10 @@ $banner-promotion-item-width: 635px;
 $primaryColor: #eeffcc;
 $bgColor: #f5f5f5;
 $planning-btn-height: 30px;
+$private-menu-content-width: 363px;
+$private-menu-content-height: 363px;
+$private-menu-btn-width: 75px;
+$private-menu-btn-height: 20px;
 
 $button-padding: 20px;
 %border-basic {
